Phase2_SymTab/y.output
Grammar

    0 $accept: start $end

    1 start: ls_exp

    2 ls_exp: %empty
    3       | assn_or_exp
    4       | ls_exp T_SEMICOLON
    5       | ls_exp T_SEMICOLON assn_or_exp
    6       | ls_exp T_NEWLINE
    7       | ls_exp T_NEWLINE assn_or_exp
    8       | ls_exp T_NEWLINE print_stmt
    9       | ls_exp T_SEMICOLON print_stmt
   10       | print_stmt

   11 assn_or_exp: exp
   12            | stmt
   13            | eq_assn

   14 stmt: T_IF ifcond assn_or_exp
   15     | T_IF ifcond assn_or_exp T_ELSE assn_or_exp
   16     | T_WHILE cond assn_or_exp
   17     | T_FOR forcond assn_or_exp

   18 eq_assn: SYM T_EQASSIGN assn_or_exp

   19 cond: T_LEFTPAREN exp T_RIGHTPAREN
   20     | T_LEFTPAREN exp T_RIGHTPAREN T_NEWLINE

   21 forcond: T_LEFTPAREN SYM T_IN exp T_RIGHTPAREN
   22        | T_LEFTPAREN SYM T_IN exp T_RIGHTPAREN T_NEWLINE

   23 ifcond: T_LEFTPAREN exp T_RIGHTPAREN
   24       | T_LEFTPAREN exp T_RIGHTPAREN T_NEWLINE

   25 print_stmt: T_PRINT exp T_RIGHTPAREN

   26 exp: SYM
   27    | CONST_STRING
   28    | CONST_NUMBER
   29    | T_LEFTPAREN assn_or_exp T_RIGHTPAREN
   30    | T_LEFTCURL ls_exp T_RIGHTCURL
   31    | exp T_LT exp
   32    | exp T_GT exp
   33    | exp T_LE exp
   34    | exp T_GE exp
   35    | exp T_NE exp
   36    | exp T_EQ exp
   37    | exp T_ANDD exp
   38    | exp T_ORD exp
   39    | exp T_PLUS exp
   40    | exp T_MINUS exp
   41    | exp T_COLON exp
   42    | exp T_FSLASH exp
   43    | exp T_STAR exp
   44    | SYM T_LEFTASSIGN exp


Terminals, with rules where they appear

$end (0) 0
error (256)
T_NE (258) 35
T_GE (259) 34
T_GT (260) 32
T_LT (261) 31
T_LE (262) 33
T_EQ (263) 36
T_ANDD (264) 37
T_ORD (265) 38
T_LEFTASSIGN (266) 44
T_EQASSIGN (267) 18
T_IF (268) 14 15
T_ELSE (269) 15
T_FOR (270) 17
T_WHILE (271) 16
T_IN (272) 21 22
CONST_NUMBER (273) 28
CONST_STRING (274) 27
SYM (275) 18 21 22 26 44
T_NEWLINE (276) 6 7 8 20 22 24
T_SEMICOLON (277) 4 5 9
T_COLON (278) 41
T_PRINT (279) 25
T_PLUS (280) 39
T_MINUS (281) 40
T_STAR (282) 43
T_FSLASH (283) 42
T_LEFTPAREN (284) 19 20 21 22 23 24 29
T_RIGHTPAREN (285) 19 20 21 22 23 24 25 29
T_LEFTCURL (286) 30
T_RIGHTCURL (287) 30


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
start (34)
    on left: 1, on right: 0
ls_exp (35)
    on left: 2 3 4 5 6 7 8 9 10, on right: 1 4 5 6 7 8 9 30
assn_or_exp (36)
    on left: 11 12 13, on right: 3 5 7 14 15 16 17 18 29
stmt (37)
    on left: 14 15 16 17, on right: 12
eq_assn (38)
    on left: 18, on right: 13
cond (39)
    on left: 19 20, on right: 16
forcond (40)
    on left: 21 22, on right: 17
ifcond (41)
    on left: 23 24, on right: 14 15
print_stmt (42)
    on left: 25, on right: 8 9 10
exp (43)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    44, on right: 11 19 20 21 22 23 24 25 31 32 33 34 35 36 37 38 39
    40 41 42 43 44


State 0

    0 $accept: . start $end

    T_IF          shift, and go to state 1
    T_FOR         shift, and go to state 2
    T_WHILE       shift, and go to state 3
    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 6
    T_PRINT       shift, and go to state 7
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    $default  reduce using rule 2 (ls_exp)

    start        go to state 10
    ls_exp       go to state 11
    assn_or_exp  go to state 12
    stmt         go to state 13
    eq_assn      go to state 14
    print_stmt   go to state 15
    exp          go to state 16


State 1

   14 stmt: T_IF . ifcond assn_or_exp
   15     | T_IF . ifcond assn_or_exp T_ELSE assn_or_exp

    T_LEFTPAREN  shift, and go to state 17

    ifcond  go to state 18


State 2

   17 stmt: T_FOR . forcond assn_or_exp

    T_LEFTPAREN  shift, and go to state 19

    forcond  go to state 20


State 3

   16 stmt: T_WHILE . cond assn_or_exp

    T_LEFTPAREN  shift, and go to state 21

    cond  go to state 22


State 4

   28 exp: CONST_NUMBER .

    $default  reduce using rule 28 (exp)


State 5

   27 exp: CONST_STRING .

    $default  reduce using rule 27 (exp)


State 6

   18 eq_assn: SYM . T_EQASSIGN assn_or_exp
   26 exp: SYM .
   44    | SYM . T_LEFTASSIGN exp

    T_LEFTASSIGN  shift, and go to state 23
    T_EQASSIGN    shift, and go to state 24

    $default  reduce using rule 26 (exp)


State 7

   25 print_stmt: T_PRINT . exp T_RIGHTPAREN

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 26


State 8

   29 exp: T_LEFTPAREN . assn_or_exp T_RIGHTPAREN

    T_IF          shift, and go to state 1
    T_FOR         shift, and go to state 2
    T_WHILE       shift, and go to state 3
    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 6
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    assn_or_exp  go to state 27
    stmt         go to state 13
    eq_assn      go to state 14
    exp          go to state 16


State 9

   30 exp: T_LEFTCURL . ls_exp T_RIGHTCURL

    T_IF          shift, and go to state 1
    T_FOR         shift, and go to state 2
    T_WHILE       shift, and go to state 3
    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 6
    T_PRINT       shift, and go to state 7
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    $default  reduce using rule 2 (ls_exp)

    ls_exp       go to state 28
    assn_or_exp  go to state 12
    stmt         go to state 13
    eq_assn      go to state 14
    print_stmt   go to state 15
    exp          go to state 16


State 10

    0 $accept: start . $end

    $end  shift, and go to state 29


State 11

    1 start: ls_exp .
    4 ls_exp: ls_exp . T_SEMICOLON
    5       | ls_exp . T_SEMICOLON assn_or_exp
    6       | ls_exp . T_NEWLINE
    7       | ls_exp . T_NEWLINE assn_or_exp
    8       | ls_exp . T_NEWLINE print_stmt
    9       | ls_exp . T_SEMICOLON print_stmt

    T_NEWLINE    shift, and go to state 30
    T_SEMICOLON  shift, and go to state 31

    $default  reduce using rule 1 (start)


State 12

    3 ls_exp: assn_or_exp .

    $default  reduce using rule 3 (ls_exp)


State 13

   12 assn_or_exp: stmt .

    $default  reduce using rule 12 (assn_or_exp)


State 14

   13 assn_or_exp: eq_assn .

    $default  reduce using rule 13 (assn_or_exp)


State 15

   10 ls_exp: print_stmt .

    $default  reduce using rule 10 (ls_exp)


State 16

   11 assn_or_exp: exp .
   31 exp: exp . T_LT exp
   32    | exp . T_GT exp
   33    | exp . T_LE exp
   34    | exp . T_GE exp
   35    | exp . T_NE exp
   36    | exp . T_EQ exp
   37    | exp . T_ANDD exp
   38    | exp . T_ORD exp
   39    | exp . T_PLUS exp
   40    | exp . T_MINUS exp
   41    | exp . T_COLON exp
   42    | exp . T_FSLASH exp
   43    | exp . T_STAR exp

    T_NE      shift, and go to state 32
    T_GE      shift, and go to state 33
    T_GT      shift, and go to state 34
    T_LT      shift, and go to state 35
    T_LE      shift, and go to state 36
    T_EQ      shift, and go to state 37
    T_ANDD    shift, and go to state 38
    T_ORD     shift, and go to state 39
    T_COLON   shift, and go to state 40
    T_PLUS    shift, and go to state 41
    T_MINUS   shift, and go to state 42
    T_STAR    shift, and go to state 43
    T_FSLASH  shift, and go to state 44

    $default  reduce using rule 11 (assn_or_exp)


State 17

   23 ifcond: T_LEFTPAREN . exp T_RIGHTPAREN
   24       | T_LEFTPAREN . exp T_RIGHTPAREN T_NEWLINE

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 45


State 18

   14 stmt: T_IF ifcond . assn_or_exp
   15     | T_IF ifcond . assn_or_exp T_ELSE assn_or_exp

    T_IF          shift, and go to state 1
    T_FOR         shift, and go to state 2
    T_WHILE       shift, and go to state 3
    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 6
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    assn_or_exp  go to state 46
    stmt         go to state 13
    eq_assn      go to state 14
    exp          go to state 16


State 19

   21 forcond: T_LEFTPAREN . SYM T_IN exp T_RIGHTPAREN
   22        | T_LEFTPAREN . SYM T_IN exp T_RIGHTPAREN T_NEWLINE

    SYM  shift, and go to state 47


State 20

   17 stmt: T_FOR forcond . assn_or_exp

    T_IF          shift, and go to state 1
    T_FOR         shift, and go to state 2
    T_WHILE       shift, and go to state 3
    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 6
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    assn_or_exp  go to state 48
    stmt         go to state 13
    eq_assn      go to state 14
    exp          go to state 16


State 21

   19 cond: T_LEFTPAREN . exp T_RIGHTPAREN
   20     | T_LEFTPAREN . exp T_RIGHTPAREN T_NEWLINE

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 49


State 22

   16 stmt: T_WHILE cond . assn_or_exp

    T_IF          shift, and go to state 1
    T_FOR         shift, and go to state 2
    T_WHILE       shift, and go to state 3
    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 6
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    assn_or_exp  go to state 50
    stmt         go to state 13
    eq_assn      go to state 14
    exp          go to state 16


State 23

   44 exp: SYM T_LEFTASSIGN . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 51


State 24

   18 eq_assn: SYM T_EQASSIGN . assn_or_exp

    T_IF          shift, and go to state 1
    T_FOR         shift, and go to state 2
    T_WHILE       shift, and go to state 3
    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 6
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    assn_or_exp  go to state 52
    stmt         go to state 13
    eq_assn      go to state 14
    exp          go to state 16


State 25

   26 exp: SYM .
   44    | SYM . T_LEFTASSIGN exp

    T_LEFTASSIGN  shift, and go to state 23

    $default  reduce using rule 26 (exp)


State 26

   25 print_stmt: T_PRINT exp . T_RIGHTPAREN
   31 exp: exp . T_LT exp
   32    | exp . T_GT exp
   33    | exp . T_LE exp
   34    | exp . T_GE exp
   35    | exp . T_NE exp
   36    | exp . T_EQ exp
   37    | exp . T_ANDD exp
   38    | exp . T_ORD exp
   39    | exp . T_PLUS exp
   40    | exp . T_MINUS exp
   41    | exp . T_COLON exp
   42    | exp . T_FSLASH exp
   43    | exp . T_STAR exp

    T_NE          shift, and go to state 32
    T_GE          shift, and go to state 33
    T_GT          shift, and go to state 34
    T_LT          shift, and go to state 35
    T_LE          shift, and go to state 36
    T_EQ          shift, and go to state 37
    T_ANDD        shift, and go to state 38
    T_ORD         shift, and go to state 39
    T_COLON       shift, and go to state 40
    T_PLUS        shift, and go to state 41
    T_MINUS       shift, and go to state 42
    T_STAR        shift, and go to state 43
    T_FSLASH      shift, and go to state 44
    T_RIGHTPAREN  shift, and go to state 53


State 27

   29 exp: T_LEFTPAREN assn_or_exp . T_RIGHTPAREN

    T_RIGHTPAREN  shift, and go to state 54


State 28

    4 ls_exp: ls_exp . T_SEMICOLON
    5       | ls_exp . T_SEMICOLON assn_or_exp
    6       | ls_exp . T_NEWLINE
    7       | ls_exp . T_NEWLINE assn_or_exp
    8       | ls_exp . T_NEWLINE print_stmt
    9       | ls_exp . T_SEMICOLON print_stmt
   30 exp: T_LEFTCURL ls_exp . T_RIGHTCURL

    T_NEWLINE    shift, and go to state 30
    T_SEMICOLON  shift, and go to state 31
    T_RIGHTCURL  shift, and go to state 55


State 29

    0 $accept: start $end .

    $default  accept


State 30

    6 ls_exp: ls_exp T_NEWLINE .
    7       | ls_exp T_NEWLINE . assn_or_exp
    8       | ls_exp T_NEWLINE . print_stmt

    T_IF          shift, and go to state 1
    T_FOR         shift, and go to state 2
    T_WHILE       shift, and go to state 3
    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 6
    T_PRINT       shift, and go to state 7
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    $default  reduce using rule 6 (ls_exp)

    assn_or_exp  go to state 56
    stmt         go to state 13
    eq_assn      go to state 14
    print_stmt   go to state 57
    exp          go to state 16


State 31

    4 ls_exp: ls_exp T_SEMICOLON .
    5       | ls_exp T_SEMICOLON . assn_or_exp
    9       | ls_exp T_SEMICOLON . print_stmt

    T_IF          shift, and go to state 1
    T_FOR         shift, and go to state 2
    T_WHILE       shift, and go to state 3
    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 6
    T_PRINT       shift, and go to state 7
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    $default  reduce using rule 4 (ls_exp)

    assn_or_exp  go to state 58
    stmt         go to state 13
    eq_assn      go to state 14
    print_stmt   go to state 59
    exp          go to state 16


State 32

   35 exp: exp T_NE . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 60


State 33

   34 exp: exp T_GE . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 61


State 34

   32 exp: exp T_GT . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 62


State 35

   31 exp: exp T_LT . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 63


State 36

   33 exp: exp T_LE . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 64


State 37

   36 exp: exp T_EQ . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 65


State 38

   37 exp: exp T_ANDD . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 66


State 39

   38 exp: exp T_ORD . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 67


State 40

   41 exp: exp T_COLON . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 68


State 41

   39 exp: exp T_PLUS . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 69


State 42

   40 exp: exp T_MINUS . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 70


State 43

   43 exp: exp T_STAR . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 71


State 44

   42 exp: exp T_FSLASH . exp

    CONST_NUMBER  shift, and go to state 4
    CONST_STRING  shift, and go to state 5
    SYM           shift, and go to state 25
    T_LEFTPAREN   shift, and go to state 8
    T_LEFTCURL    shift, and go to state 9

    exp  go to state 72


State 45

   23 ifcond: T_LEFTPAREN exp . T_RIGHTPAREN
   24       | T_LEFTPAREN exp . T_RIGHTPAREN T_NEWLINE
   31 exp: exp . T_LT exp
   32    | exp . T_GT exp
   33    | exp . T_LE exp
   34    | exp . T_GE exp
   35    | exp . T_NE exp
   36    | exp . T_EQ exp
   37    | exp . T_ANDD exp
   38    | exp . T_ORD exp
   39    | exp . T_PLUS exp
   40    | exp . T_MINUS exp
   41    | exp . T_COLON exp
   42    | exp . T_FSLASH exp
   43    | exp . T_STAR exp

    T_NE          shift, and go to state 32
    T_GE          shift, and go to state 33
    T_GT          shift, and go to state 34
    T_LT          shift, and go to state 35
    T_LE          shift, and go to state 36
    T_EQ          shift, and go to state 37
    T_ANDD        shift, and go to state 38
    T_ORD         shift, and go to state 39
    T_COLON       shift, and go to state 40
    T_PLUS        shift, and go to state 41
    T_MINUS       shift, and go to state 42
    T_STAR        shift, and go to state 43
    T_FSLASH      shift, and go to state 44
    T_RIGHTPAREN  shift, and go to state 73


State 46

   14 stmt: T_IF ifcond assn_or_exp .
   15     | T_IF ifcond assn_or_exp . T_ELSE assn_or_exp

    T_ELSE  shift, and go to state 74

    $default  reduce using rule 14 (stmt)


State 47

   21 forcond: T_LEFTPAREN SYM . T_IN exp T_RIGHTPAREN
   22        | T_LEFTPAREN SYM . T_IN exp T_RIGHTPAREN T_NEWLINE

    T_IN  shift, and go to state 75


State 48

   17 stmt: T_FOR forcond assn_or_exp .

    $default  reduce using rule 17 (stmt)


State 49

   19 cond: T_LEFTPAREN exp . T_RIGHTPAREN
   20     | T_LEFTPAREN exp . T_RIGHTPAREN T_NEWLINE
   31 exp: exp . T_LT exp
   32    | exp . T_GT exp
   33    | exp . T_LE exp
   34    | exp . T_GE exp
   35    | exp . T_NE exp
   36    | exp . T_EQ exp
   37    | exp . T_ANDD exp
   38    | exp . T_ORD exp
   39    | exp . T_PLUS exp
   40    | exp . T_MINUS exp
   41    | exp . T_COLON exp
   42    | exp . T_FSLASH exp
   43    | exp . T_STAR exp

    T_NE          shift, and go to state 32
    T_GE          shift, and go to state 33
    T_GT          shift, and go to state 34
    T_LT          shift, and go to state 35
    T_LE          shift, and go to state 36
    T_EQ          shift, and go to state 37
    T_ANDD        shift, and go to state 38
    T_ORD         shift, and go to state 39
    T_COLON       shift, and go to state 40
    T_PLUS        shift, and go to state 41
    T_MINUS       shift, and go to state 42
    T_STAR        shift, and go to state 43
    T_FSLASH      shift, and go to state 44
    T_RIGHTPAREN  shift, and go to state 76


State 50

   16 stmt: T_WHILE cond assn_or_exp .

    $default  reduce using rule 16 (stmt)


State 51

   31 exp: exp . T_LT exp
   32    | exp . T_GT exp
   33    | exp . T_LE exp
   34    | exp . T_GE exp
   35    | exp . T_NE exp
   36    | exp . T_EQ exp
   37    | exp . T_ANDD exp
   38    | exp . T_ORD exp
   39    | exp . T_PLUS exp
   40    | exp . T_MINUS exp
   41    | exp . T_COLON exp
   42    | exp . T_FSLASH exp
   43    | exp . T_STAR exp
   44    | SYM T_LEFTASSIGN exp .

    T_COLON   shift, and go to state 40
    T_PLUS    shift, and go to state 41
    T_MINUS   shift, and go to state 42
    T_STAR    shift, and go to state 43
    T_FSLASH  shift, and go to state 44

    $default  reduce using rule 44 (exp)


State 52

   18 eq_assn: SYM T_EQASSIGN assn_or_exp .

    $default  reduce using rule 18 (eq_assn)


State 53

   25 print_stmt: T_PRINT exp T_RIGHTPAREN .

    $default  reduce using rule 25 (print_stmt)


State 54

   29 exp: T_LEFTPAREN assn_or_exp T_RIGHTPAREN .

    $default  reduce using rule 29 (exp)


State 55

   30 exp: T_LEFTCURL ls_exp T_RIGHTCURL .

    $default  reduce using rule 30 (exp)


State 56

    7 ls_exp: ls_exp T_NEWLINE assn_or_exp .

    $default  reduce using rule 7 (ls_exp)


State 57

    8 ls_exp: ls_exp T_NEWLINE print_stmt .

    $default  reduce using rule 8 (ls_exp)


State 58

    5 ls_exp: ls_exp T_SEMICOLON assn_or_exp .

    $default  reduce using rule 5 (ls_exp)


State 59

    9 ls_exp: ls_exp T_SEMICOLON print_stmt .

    $default  reduce using rule 9 (ls_exp)


State 60

   31 exp: exp . T_LT exp
   32    | exp . T_GT exp
   33    | exp . T_LE exp
   34    | exp . T_GE exp
   35    | exp . T_NE exp
   35    | exp T_NE exp .
   36    | exp . T_EQ exp
   37    | exp . T_ANDD exp
   38    | exp . T_ORD exp
   39    | exp . T_PLUS exp
   40    | exp . T_MINUS exp
   41    | exp . T_COLON exp
   42    | exp . T_FSLASH exp
   43    | exp . T_STAR exp

    T_ANDD    shift, and go to state 38
    T_ORD     shift, and go to state 39
    T_COLON   shift, and go to state 40
    T_PLUS    shift, and go to state 41
    T_MINUS   shift, and go to state 42
    T_STAR    shift, and go to state 43
    T_FSLASH  shift, and go to state 44

    T_NE  error (nonassociative)
    T_GE  error (nonassociative)
    T_GT  error (nonassociative)
    T_LT  error (nonassociative)
    T_LE  error (nonassociative)
    T_EQ  error (nonassociative)

    $default  reduce using rule 35 (exp)


State 61

   31 exp: exp . T_LT exp
   32    | exp . T_GT exp
   33    | exp . T_LE exp
   34    | exp . T_GE exp
   34    | exp T_GE exp .
   35    | exp . T_NE exp
   36    | exp . T_EQ exp
   37    | exp . T_ANDD exp
   38    | exp . T_ORD exp
   39    | exp . T_PLUS exp
   40    | exp . T_MINUS exp
   41    | exp . T_COLON exp
   42    | exp . T_FSLASH exp
   43    | exp . T_STAR exp

    T_ANDD    shift, and go to state 38
    T_ORD     shift, and go to state 39
    T_COLON   shift, and go to state 40
    T_PLUS    shift, and go to state 41
    T_MINUS   shift, and go to state 42
    T_STAR    shift, and go to state 43
    T_FSLASH  shift, and go to state 44

    T_NE  error (nonassociative)
    T_GE  error (nonassociative)
    T_GT  error (nonassociative)
    T_LT  error (nonassociative)
    T_LE  error (nonassociative)
    T_EQ  error (nonassociative)

    $default  reduce using rule 34 (exp)


State 62

   31 exp: exp . T_LT exp
   32    | exp . T_GT exp
   32    | exp T_GT exp .
   33    | exp . T_LE exp
   34    | exp . T_GE exp
   35    | exp . T_NE exp
   36    | exp . T_EQ exp
   37    | exp . T_ANDD exp
   38    | exp . T_ORD exp
   39    | exp . T_PLUS exp
   40    | exp . T_MINUS exp
   41    | exp . T_COLON exp
   42    | exp . T_FSLASH exp
   43    | exp . T_STAR exp

    T_ANDD    shift, and go to state 38
    T_ORD     shift, and go to state 39
    T_COLON   shift, and go to state 40
    T_PLUS    shift, and go to state 41
    T_MINUS   shift, and go to state 42
    T_STAR    shift, and go to state 43
    T_FSLASH  shift, and go to state 44

    T_NE  error (nonassociative)
    T_GE  error (nonassociative)
    T_GT  error (nonassociative)
    T_LT  error (nonassociative)
    T_LE  error (nonassociative)
    T_EQ  error (nonassociative)

    $default  reduce using rule 32 (exp)


State 63

   31 exp: exp . T_LT exp
   31    | exp T_LT exp .
   32    | exp . T_GT exp
   33    | exp . T_LE exp
   34    | exp . T_GE exp
   35    | exp . T_NE exp
   36    | exp . T_EQ exp
   37    | exp . T_ANDD exp
   38    | exp . T_ORD exp
   39    | exp . T_PLUS exp
   40    | exp . T_MINUS exp
   41    | exp . T_COLON exp
   42    | exp . T_FSLASH exp
   43    | exp . T_STAR exp

    T_ANDD    shift, and go to state 38
    T_ORD     shift, and go to state 39
    T_COLON   shift, and go to state 40
    T_PLUS    shift, and go to state 41
    T_MINUS   shift, and go to state 42
    T_STAR    shift, and go to state 43
    T_FSLASH  shift, and go to state 44

    T_NE  error (nonassociative)
    T_GE  error (nonassociative)
    T_GT  error (nonassociative)
    T_LT  error (nonassociative)
    T_LE  error (nonassociative)
    T_EQ  error (nonassociative)

    $default  reduce using rule 31 (exp)


State 64

   31 exp: exp . T_LT exp
   32    | exp . T_GT exp
   33    | exp . T_LE exp
   33    | exp T_LE exp .
   34    | exp . T_GE exp
   35    | exp . T_NE exp
   36    | exp . T_EQ exp
   37    | exp . T_ANDD exp
   38    | exp . T_ORD exp
   39    | exp . T_PLUS exp
   40    | exp . T_MINUS exp
   41    | exp . T_COLON exp
   42    | exp . T_FSLASH exp
   43    | exp . T_STAR exp

    T_ANDD    shift, and go to state 38
    T_ORD     shift, and go to state 39
    T_COLON   shift, and go to state 40
    T_PLUS    shift, and go to state 41
    T_MINUS   shift, and go to state 42
    T_STAR    shift, and go to state 43
    T_FSLASH  shift, and go to state 44

    T_NE  error (nonassociative)
    T_GE  error (nonassociative)
    T_GT  error (nonassociative)
    T_LT  error (nonassociative)
    T_LE  error (nonassociative)
    T_EQ  error (nonassociative)

    $default  reduce using rule 33 (exp)


State 65

   31 exp: exp . T_LT exp
   32    | exp . T_GT exp
   33    | exp . T_LE exp
   34    | exp . T_GE exp
   35    | exp . T_NE exp
   36    | exp . T_EQ exp
   36    | exp T_EQ exp .
   37    | exp . T_ANDD exp
   38    | exp . T_ORD exp
   39    | exp . T_PLUS exp
   40    | exp . T_MINUS exp
   41    | exp . T_COLON exp
   42    | exp . T_FSLASH exp
   43    | exp . T_STAR exp

    T_ANDD    shift, and go to state 38
    T_ORD     shift, and go to state 39
    T_COLON   shift, and go to state 40
    T_PLUS    shift, and go to state 41
    T_MINUS   shift, and go to state 42
    T_STAR    shift, and go to state 43
    T_FSLASH  shift, and go to state 44

    T_NE  error (nonassociative)
    T_GE  error (nonassociative)
    T_GT  error (nonassociative)
    T_LT  error (nonassociative)
    T_LE  error (nonassociative)
    T_EQ  error (nonassociative)

    $default  reduce using rule 36 (exp)


State 66

   31 exp: exp . T_LT exp
   32    | exp . T_GT exp
   33    | exp . T_LE exp
   34    | exp . T_GE exp
   35    | exp . T_NE exp
   36    | exp . T_EQ exp
   37    | exp . T_ANDD exp
   37    | exp T_ANDD exp .
   38    | exp . T_ORD exp
   39    | exp . T_PLUS exp
   40    | exp . T_MINUS exp
   41    | exp . T_COLON exp
   42    | exp . T_FSLASH exp
   43    | exp . T_STAR exp

    T_COLON   shift, and go to state 40
    T_PLUS    shift, and go to state 41
    T_MINUS   shift, and go to state 42
    T_STAR    shift, and go to state 43
    T_FSLASH  shift, and go to state 44

    $default  reduce using rule 37 (exp)


State 67

   31 exp: exp . T_LT exp
   32    | exp . T_GT exp
   33    | exp . T_LE exp
   34    | exp . T_GE exp
   35    | exp . T_NE exp
   36    | exp . T_EQ exp
   37    | exp . T_ANDD exp
   38    | exp . T_ORD exp
   38    | exp T_ORD exp .
   39    | exp . T_PLUS exp
   40    | exp . T_MINUS exp
   41    | exp . T_COLON exp
   42    | exp . T_FSLASH exp
   43    | exp . T_STAR exp

    T_ANDD    shift, and go to state 38
    T_COLON   shift, and go to state 40
    T_PLUS    shift, and go to state 41
    T_MINUS   shift, and go to state 42
    T_STAR    shift, and go to state 43
    T_FSLASH  shift, and go to state 44

    $default  reduce using rule 38 (exp)


State 68

   31 exp: exp . T_LT exp
   32    | exp . T_GT exp
   33    | exp . T_LE exp
   34    | exp . T_GE exp
   35    | exp . T_NE exp
   36    | exp . T_EQ exp
   37    | exp . T_ANDD exp
   38    | exp . T_ORD exp
   39    | exp . T_PLUS exp
   40    | exp . T_MINUS exp
   41    | exp . T_COLON exp
   41    | exp T_COLON exp .
   42    | exp . T_FSLASH exp
   43    | exp . T_STAR exp

    $default  reduce using rule 41 (exp)


State 69
